--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
 
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    -->    
+    <!--<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCTkEJQu-nKYVzXhVJEjpjluFblL8GW0hA&callback=initMap"
+    type="text/javascript"></script>-->
+    
   </body>
 </html>
